# chatbot_juridique_intelligent

./: .env.example  README.md  main.py  pyproject.toml
app/: README.MD  agent.py  bot.py
app/helpers/: llm.py
app/tools/: kg_retriever.py  vector_retriever.py  web_search.py
kg_construction/: README.MD  data_loader_pdf.py
