[project]
name = "chatbot-juridique-intelligent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j==5.28.2",
    "neo4j-graphrag[openai]==1.10.1",
    "fsspec==2024.12.0",
    "dotenv>=0.9.9",
    "langchain==0.3.9",
    "langchain-neo4j==0.1.1",
    "langchain-openai==0.2.10",
    "streamlit==1.51.0",
]
